*khtml-5.53.0 (20 Feb 2019)

  20 Feb 2019; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/khtml-openssl-1.1.0.patch, +khtml-5.53.0.ebuild, +metadata.xml:
  kde-frameworks/khtml: Support OpenSSL 1.1.0.