@@ -2,14 +2,14 @@
 Hash: SHA256
 
 AUX khtml-openssl-1.1.0.patch 18686 SHA256 fa9bd4b6c50302d9a5736f9a1b9492b92b21d719e4149428c746d2bd44bbe939 SHA512 fd88cb30c7ebe24c5bdf2da011513b395044cc2b05ceeec27a69fa26347f324d586b0315c2a59c48f1df4b536bc22447f68de9101238dca42ff7f684703fd527 WHIRLPOOL fc3ae19fccab11e601cbf797ea72a856baafb88107620479ca88f064153aeac26365d452aa093c9b1abca9cbbd27ad233164d72665103141e4728faa394267ec
-DIST khtml-5.53.0.tar.xz 2077000 SHA256 de85b04cd71357ced676c2e15643c8a65cc29b3eef5983c3308b7c9126be951d SHA512 5bc50aacf791dea1064945cf1b5aaf634e86c568ff73136b473888a54d4ad3bea239a793b928f1875d5f79654b7072203f21a11b321adf8f686df063b0656240 WHIRLPOOL 756de5a7c10d5d2bc0da9c64e61b2cd63edc980b54f9df651511172de97796e1c410a540387792bfb1cfa72b513192372f08a36bb6c4e4f9b48e01fce8bfb2e3
-EBUILD khtml-5.53.0.ebuild 1665 SHA256 0a589267de1c91d209f4e9e921ac9e340f0d4c11e0f2139eed6253bbce157045 SHA512 b10f30108a71935a9f398230db818a1ff505765cbc2337dd19ab86219e95dec7ba887542a14be06e13da7cc577bc9aac592c40a5c77b34fd9e5773292c85ab8a WHIRLPOOL a96ba8efe81e287a000372798361f046ee64679b8ed9be3107db84f0558c245a4ba54284528521c1eaf8e74a6be9b8c82f75bfda9872164a2607c2b2cb1d417b
-MISC ChangeLog 211 SHA256 5b3e04260762d4af7d30cb8fd1cce40117e25cc31bb68137680b398e42964169 SHA512 661ffb68a0659f811ffc1c233108f5a4f1516c4c1c4d15eca7026dd8dfd62dfdb005033c41fb1520685482ce6470910d5103d9f902fcd58763cce148551b6acd WHIRLPOOL 1371c97a1c98b0f8eb44a2ae4603bfdbd6d4cce5a235b31b5563ea1ea0e4e6200edeef9a56bd3f51d88eb6bff2737cd841aa4b0cbb9a82c2b1d6af3641b98bad
+DIST khtml-5.58.0.tar.xz 2079860 SHA256 f75635e4d0ad9816953bbd0f8c18aea7cd470dc130a6294fa1d32c37bd66dcff SHA512 f4bc0f9a5a6288e76efe79596957aefeff5757cb447c9752bd20fd6dc48a199311fdcce78c22696d66c5dc2ca509d4c3cde56c0335be1c8e19bf104544546824 WHIRLPOOL 95aba558b6e0cb41406e5391b99cb7dfa1220257112b7a80128525249642c123387ee93f8d48094254414d7a2aa31e80e678a338c6af0214e3915784a49e8853
+EBUILD khtml-5.58.0.ebuild 1669 SHA256 3aa349720f6be68969fd18c769055ce8a003ca018511ae72186aaa229c31fc49 SHA512 f5216cb99971f4ba53d9b436331fb10ac336aae7c9382b3d2dda5ac641a13c210f9f98204d61843f77d2ab77e56f7428709f494922ed6047c718e79ad2351e9a WHIRLPOOL 12650b5c17e1292f917fc656ec92bd427b369e6a0b40a00c43063d67e9e9be3482268d9ee4ea0c001aeb7c2138c1b3daafce20b19e1a611ed1c08d3b903a0a90
+MISC ChangeLog 389 SHA256 34dfef32d195d9205e43da7c4015b4d1b409d8aa67084eb88363144bff4a6795 SHA512 8e09712e19d464c644042c9cadd8443546de8855d7276b0d0d9da11ec3c5db2af45dcd598096b197cfa4eeb6270522c8a5225e459b1540ef6635fb96d5f39dac WHIRLPOOL 13f5a8a755c5de8644887b3de3f08cb35b83a50f54613065083cdac5d118cce8e0e3e5e0f255d8a172c0246f019c104c6dfc0189625b8c15d9386e653571c2ad
 MISC metadata.xml 249 SHA256 584f1dcf51866dc24a9abf7a89bfba0fad11dde81ae1c1b715da41770d233c99 SHA512 76a5a340b13f0053ca3c5e94ed24380ea8d29b45ac8655419e22eaadb1e4a827c04d2e7e36b65145c4964e6526f656618fc6ac144e277ef53cb7373e6239e3c3 WHIRLPOOL 200c07a8bf7c55b11b7936d5cd30e991a511684913334e72f59def66c0ced5fed0b4a8754e2d98bffbab631cb90d4e17fcccc59d5dcc5a8e988f69e47c85518c
 -----BEGIN PGP SIGNATURE-----
 
-iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXGy5yQAKCRDP2g+bNZZC
-IqU+AQCd/VPrdMHBvoAusjnaiqrn6eGiWh5rRXS6zCTvjaguhAD+IDj9pvVvlCs4
-sURuxzsOSQRhBERxecLgyH3YqSa/GQ4=
-=qLTB
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXPwGUgAKCRDP2g+bNZZC
+Ih4bAQDCl4AK8x0KZLpaiaRITQLHHw+jadbxKW+qrPwCzxT4IAD9HxItmvrdsjAX
+9EjwZg2cXlw1DBZiG3gH+bmaMSySrg4=
+=B/wk
 -----END PGP SIGNATURE-----
